bunch of cleanups and speedups